--- a/CofreAlarme/res/layout/activity_cofre.xml
+++ b/CofreAlarme/res/layout/activity_cofre.xml
@@ -1,16 +1,29 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_gravity="center"
+    android:background="@drawable/fundo"
+    android:columnCount="1"
     tools:context="com.example.cofrealarme.CofreActivity" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="290dp"
+        android:layout_height="343dp"
+        android:layout_column="0"
+        android:layout_gravity="center"
+        android:layout_marginTop="46dp"
+        android:layout_row="0"
+        android:src="@drawable/medio" />
 
-</RelativeLayout>
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="230dp"
+        android:layout_height="230dp"
+        android:layout_column="0"
+        android:layout_gravity="center"
+        android:layout_row="0"
+        android:src="@drawable/frente" />
+
+</GridLayout>
