--- a/CofreAlarme/res/layout/activity_main.xml
+++ b/CofreAlarme/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.cofrealarme.MainActivity" >
+    tools:context="com.example.cofrealarme.MainActivity"
+    android:background="@drawable/fundo" >
 
     <TimePicker
         android:id="@+id/timePicker"
