--- a/CofreAlarme/res/layout/activity_cofre.xml
+++ b/CofreAlarme/res/layout/activity_cofre.xml
@@ -1,29 +1,47 @@
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:background="@drawable/fundo"
-    android:columnCount="1"
     tools:context="com.example.cofrealarme.CofreActivity" >
 
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="290dp"
-        android:layout_height="343dp"
-        android:layout_column="0"
+        android:layout_height="280dp"
         android:layout_gravity="center"
-        android:layout_marginTop="46dp"
-        android:layout_row="0"
         android:src="@drawable/medio" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="230dp"
         android:layout_height="230dp"
-        android:layout_column="0"
         android:layout_gravity="center"
-        android:layout_row="0"
         android:src="@drawable/frente" />
 
-</GridLayout>
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:layout_marginBottom="5dp"
+        android:text="@string/desativar" />
+
+    <EditText
+        android:id="@+id/editText1"
+        android:layout_width="116dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:layout_marginBottom="50dp"
+        android:ems="10"
+        android:hint="Senha"
+        android:textColorHint="@color/cinza"
+        android:gravity="center"
+        android:inputType="number" >
+
+        <requestFocus />
+    </EditText>
+
+</FrameLayout>
